changed loading & fade animations and squashed some (smol) visual bugs.

--- a/Hurb Web/templates/style.css
+++ b/Hurb Web/templates/style.css
@@ -1,3 +1,5 @@
+
+
 #loader-wrapper .loader-section {
     position: fixed;
     top: 0;
@@ -6,11 +8,11 @@
     background: #000000;
     z-index: 1000;
 }
- 
+
 #loader-wrapper .loader-section.section-left {
     left: 0;
 }
- 
+
 #loader-wrapper .loader-section.section-right {
     right: 0;
 }
@@ -20,14 +22,14 @@
 }
 
 .loaded #loader-wrapper .loader-section.section-left {
-    -webkit-transform: translateX(-100%);  
-    -ms-transform: translateX(-100%);  
-    transform: translateX(-100%); 
+    -webkit-transform: translateX(-100%);
+    -ms-transform: translateX(-100%);
+    transform: translateX(-100%);
 }
- 
+
 .loaded #loader-wrapper .loader-section.section-right {
-    -webkit-transform: translateX(100%); 
-    -ms-transform: translateX(100%); 
+    -webkit-transform: translateX(100%);
+    -ms-transform: translateX(100%);
     transform: translateX(100%);
 }
 
@@ -47,7 +49,7 @@
 
 .loaded #loader-wrapper .loader-section.section-right,
 .loaded #loader-wrapper .loader-section.section-left {
- 
+
     -webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
                 transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
 }
@@ -159,7 +161,7 @@ body{
     text-align: center;
     padding-right: 0px;
     padding-left: 0px;
-    
+
 }
 
 .logo{
@@ -345,6 +347,15 @@ body{
     box-shadow: 4px 8px 18px rgba(0.30980393290519714, 0.30980393290519714, 0.30980393290519714, 1);
     border-radius: 30px;
     vertical-align: middle;
+    opacity: 0%;
+
+    overflow: auto;
+    margin-left: 10%;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    margin-top: auto;
+    margin-bottom: auto;
 
     animation: ltr-anime 1.5s 4s ease forwards;
 }
@@ -360,6 +371,7 @@ body{
     line-height: 30px;
     padding-right: 5%;
     padding-left: 5%;
+    opacity: 0%;
 
     color: #FFFFFF;
     animation: ltr-anime 1.5s 4s ease forwards;
@@ -376,7 +388,8 @@ body{
     line-height: 20px;
     padding-left: 5%;
     padding-right: 5%;
-        
+    opacity: 0%;
+
     color: #FFFFFF;
     animation: ltr-anime 1.5s 4s ease forwards;
 }
@@ -395,6 +408,15 @@ body{
     box-shadow: 4px 8px 18px rgba(0.30980393290519714, 0.30980393290519714, 0.30980393290519714, 1);
     border-radius: 30px;
     vertical-align: middle;
+    opacity: 0%;
+
+    overflow: auto;
+    margin-left: auto;
+    margin-right: 10%;
+    left: 0;
+    right: 0;
+    margin-top: auto;
+    margin-bottom: auto;
 
     animation: ltr-anime 1.5s 4s ease forwards;
 }
@@ -410,6 +432,7 @@ body{
     line-height: 30px;
     padding-right: 5%;
     padding-left: 5%;
+    opacity: 0%;
 
     color: #FFFFFF;
 
@@ -427,24 +450,27 @@ body{
     line-height: 20px;
     padding-left: 5%;
     padding-right: 5%;
-        
+    opacity: 0%;
+
     color: #FFFFFF;
 
     animation: ltr-anime 1.5s 4s ease forwards;
 }
 
-@keyframes ltr-anime{
+/*@keyframes ltr-anime{
     0%{
-        left: 0%;
+        left: 0px;
         opacity: 0;
     }
     100%{
-        left: 5%;
+        left: 100px;
         opacity: 1;
     }
+}*/
+
+.fade {
+  opacity: 1;
 }
-
-
 
 
 .coming-soon{
@@ -475,7 +501,7 @@ body{
     text-align: center;
 
     color: #FFFFFF;
-    
+
 }
 
 .commands{
@@ -517,12 +543,12 @@ body{
     height: 80px;
     left: 250px;
     overflow: hidden;*/
-    
+
     padding: 5px;
-    width: 200px; 
+    width: 200px;
     height: 100px;
-    position: relative; 
-    top: -150px; 
+    position: relative;
+    top: -150px;
     left: 180px;
 
     background: #FFBEBE;
@@ -549,7 +575,7 @@ body{
     display: inline-block;
     border-bottom: 1px dotted black;
 }
-  
+
   .tooltip .tooltiptext {
     visibility: hidden;
     width: 120px;
@@ -558,11 +584,11 @@ body{
     text-align: center;
     border-radius: 6px;
     padding: 5px 0;
-  
+
     position: absolute;
     z-index: 1;
 }
-  
+
   .tooltip:hover .tooltiptext {
     visibility: visible;
 }
@@ -609,13 +635,13 @@ body{
     font-weight: 600;
     font-size: 24px;
     line-height: 24px;
- 
+
     text-align: center;
     position: absolute;
     top: 200px;
     left: -100px;
 
-    color: #FFFFFF;
+    color: rgba(255, 255, 255, 0.50);
 }
 
 .h_users{
@@ -680,6 +706,11 @@ body{
 
 .curve2{
     position: relative;
+}
+
+.footer_curve{
+  bottom: 0px;
+  margin-bottom: 0px;
 }
 
 .copyright{
@@ -757,7 +788,7 @@ body{
     color: rgba(255, 255, 255, 0.75);
     transition: color .4s ease-out;
 }
-  
+
 .login_prompt a:hover, .text_cmds a:hover, .tandp a:hover, .h_links a:hover{
     text-decoration: none;
     color: #ffffff;
@@ -773,7 +804,7 @@ body{
       left: 0;
     transition: right .4s cubic-bezier(0,.5,0,1), border-color .4s ease-out;
 }
-  
+
 .login_prompt a:hover::after, .text_cmds a:hover::after, .tandp a:hover::after, .h_links a:hover::after{
     border-color: rgba(255, 255, 255, 0.75);
     animation: anchor-underline 2s cubic-bezier(0,.5,0,1) infinite;
@@ -795,7 +826,7 @@ body{
 }
 
 .add_button_1:hover, .add_button_2:hover{
-    box-shadow: 20px 30px 18px rgba(0.30980393290519714, 0.30980393290519714, 0.30980393290519714, 1); 
+    box-shadow: 20px 30px 18px rgba(0.30980393290519714, 0.30980393290519714, 0.30980393290519714, 1);
 }
 
 .shape_1{
@@ -811,7 +842,7 @@ body{
 .features_button, .h_login {
     transition-duration: 0.8s;
 }
-  
+
 .features_button:hover, .h_login:hover{
     background-color: #ffffff;
     color: #000000;
@@ -827,7 +858,7 @@ body{
 }
 
 .graphic_1:hover{
-    
+
 }
 
 html{
@@ -873,7 +904,7 @@ html{
     5% { opacity: 1; }
     8% { opacity: 0; }
     100% { opacity: 0; }
-} 
+}
 
 .text-1 {
     animation: hideshow 45s 0s ease infinite;
@@ -1073,7 +1104,7 @@ html{
 .add_button:hover span, .add_button_2:hover span{
     padding-right: 25px;
 }
-  
+
 .add_button:hover span:after, .add_button_2:hover span:after {
     opacity: 1;
     right: 0;
